--- a/environment.yml
+++ b/environment.yml
@@ -15,3 +15,4 @@ dependencies:
     - jupyter-book  # Produce book
     - black         # 
     - scikit-learn  # Statistics and machine learning
+    - scikit-image  # Image processing
